# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.43 2009/01/26 11:47:07 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.5 (2009/??/??)
 - (2009/01/26) Fixed bug# 3528 - Stats-cache-mechanism does not take unfixed
    restrictions in consideration.
 - (2009/01/23) Fixed bug# 3615 - The links to the related Customer User and
    related Group in [ Customer Users <-> Groups ] frontend were broken.
 - (2009/01/23) Fixed bug# 3499 - Permission problems if you change the
    configuration of the System::Permissions. Now it doesn't matter if you
    active or deactive one of the additional permissions.
 - (2009/01/22) Fixed bug# 3137 - Ticket search does not work with words like
    "BPX" and "new".
 - (2009/01/22) Fixed bug# 3596 - Show a warning, if some tries to renaming
    the admin group in admin frontend.

2.3.4 (2009/01/21)
 - (2009/01/20) Fixed bug# 3447 - CustomerUser-Renaming to existing UserLogin
    was possible.
 - (2009/01/20) Fixed bug# 3603 - Different Max-Attribute handling in Layout.pm
    BuildSelection and OptionStrgHashRef.
 - (2009/01/20) Fixed bug# 3601 - Problems in function BuildSelection with
   ''-Strings and 0.
 - (2009/01/15) Fixed bug# 3595 - VacationCheck() of Kernel::System::Time is
    ignoring different OTRS calendar.
 - (2009/01/13) Fixed bug# 3542 - Static Stats lose associated perlmodule after
    editing.
 - (2009/01/10) Fixed bug# 3575 - Framework file get lost after upgrading OTRS
    and reinstalling or uninstalling e. g. ITSM pakages then.
 - (2008/12/08) Fixed bug# 3462 - SMIME crypt and sign functions bail out -
     unable to save random state.
 - (2008/12/04) Fixed bug# 3360 - Service list formating broken after AJAX reload.